manager: provider add permission check

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -32,4 +32,5 @@ dependencies {
 
     implementation project(':api-base')
     implementation project(':api')
+    compileOnly project(':support-fragment-stub')
 }
