--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     implementation 'moe.shizuku.support:support-utils:2.0.1'
     implementation 'moe.shizuku.support:recyclerview-utils:2.0.3'
     implementation 'moe.shizuku.fontprovider:api:7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
 
 apply from: rootProject.file('signing.gradle')
