--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -7,14 +7,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="${applicationId}.permission.RECEIVE_SERVER_STARTED" />
 
+    <permission-group
+        android:name="moe.shizuku.manager.permission-group.API"
+        android:description="@string/permission_group_description"
+        android:icon="@drawable/ic_permission_24dp"
+        android:label="@string/permission_group_label" />
     <permission
         android:name="moe.shizuku.manager.permission.API"
+        android:permissionGroup="moe.shizuku.manager.permission-group.API"
         android:description="@string/permission_description"
         android:icon="@drawable/ic_permission_24dp"
         android:label="@string/permission_label"
         android:protectionLevel="normal" />
     <permission
         android:name="moe.shizuku.manager.permission.API_V23"
+        android:permissionGroup="moe.shizuku.manager.permission-group.API"
         android:description="@string/permission_description"
         android:icon="@drawable/ic_permission_24dp"
         android:label="@string/permission_label"
