--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName rootProject.ext.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        resValue "string", "versionName", "${rootProject.ext.versionName} (${rootProject.ext.versionCode})"
+        resValue "string", "versionName", "${rootProject.ext.versionName}"
     }
     signingConfigs {
         sign
