--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 include ':generator', ':api'
 
 include ':api-base', ':support-fragment-stub'
-include ':api-21', ':api-22', ':api-23', ':api-24', ':api-25', ':api-26'
+include ':api-21', ':api-22', ':api-23', ':api-24', ':api-25', ':api-26', ':api-27'
 
 include ':server-base', ':server-stub'
-include ':server-21', ':server-22', ':server-23', ':server-24', ':server-25', ':server-26'
+include ':server-21', ':server-22', ':server-23', ':server-24', ':server-25', ':server-26', ':server-27'
 
 include ':manager', ':sample'
