--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -38,8 +38,9 @@ android {
             //jniLibs.srcDirs 'build/starter'
         }
     }
-    lintOptions {
-        disable 'AppCompatCustomView'
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 
@@ -50,7 +51,6 @@ dependencies {
     })
     testImplementation 'junit:junit:4.12'
     implementation project(':api-base')
-    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation "com.android.support:support-fragment:$supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
@@ -58,11 +58,14 @@ dependencies {
     implementation "moe.shizuku.preference:preference:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-dialog-android:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-simplemenu:$preferenceLibraryVersion"
-    implementation 'moe.shizuku.support:support-utils:2.2.5'
-    implementation 'moe.shizuku.support:recyclerview-utils:2.1.1'
+    implementation "moe.shizuku.support:design:2.1.0"
+    implementation 'moe.shizuku.support:support-utils:2.3.6'
+    implementation 'moe.shizuku.support:recyclerview-utils:2.1.3'
     implementation 'moe.shizuku.fontprovider:api:10'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
 
 apply from: rootProject.file('signing.gradle')
+
+preBuild.dependsOn ':dex'
