--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -68,13 +68,13 @@ dependencies {
     implementation "androidx.fragment:fragment:$androidXLibraryVersion"
     implementation "androidx.recyclerview:recyclerview:$androidXLibraryVersion"
     implementation "androidx.cardview:cardview:$androidXLibraryVersion"
-    implementation 'eu.chainfire:libsuperuser:1.0.0.201704021214'
+    implementation 'com.github.topjohnwu.libsu:core:2.2.1'
     implementation "moe.shizuku.preference:preference:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-dialog-android:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-simplemenu:$preferenceLibraryVersion"
     implementation "moe.shizuku.support:design:3.0.0"
-    implementation 'moe.shizuku.support:support-utils:3.0.2'
-    implementation 'moe.shizuku.support:recyclerview-utils:3.0.2'
+    implementation 'moe.shizuku.support:support-utils:3.0.4'
+    implementation 'moe.shizuku.support:recyclerview-utils:3.0.4'
     implementation 'moe.shizuku.fontprovider:api:10'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
