--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -58,6 +58,30 @@
             android:name=".SettingsActivity"
             android:label="@string/action_settings"
             android:theme="@style/AppTheme.Apps" />
+        <activity
+            android:name=".TokenReceiveActivity"
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL"
+            android:theme="@style/Translucent">
+            <intent-filter>
+                <action android:name="${applicationId}.intent.action.SERVER_STARTED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <!--<activity
+            android:name=".RequestBinderActivity"
+            android:directBootAware="true"
+            android:excludeFromRecents="true"
+            android:exported="true"
+            android:permission="@string/permission"
+            android:theme="@style/GrantPermissions">
+            <intent-filter>
+                <action android:name="${applicationId}.intent.action.REQUEST_AUTHORIZATION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>-->
 
         <receiver
             android:name=".receiver.BootCompleteReceiver"
@@ -73,6 +97,10 @@
         </receiver>
 
         <service
+            android:name=".service.WorkService"
+            android:directBootAware="true"
+            android:exported="false" />
+        <service
             android:name=".service.ShellService"
             android:directBootAware="true"
             android:exported="false" />
@@ -83,7 +111,7 @@
 
         <!-- v2 components -->
         <activity
-            android:name=".legacy.AuthorizationActivity"
+            android:name=".legacy.AuthorizationActivityV21"
             android:enabled="@bool/auth_activity_enabled"
             android:excludeFromRecents="true"
             android:exported="true"
@@ -109,24 +137,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".TokenReceiveActivity"
-            android:directBootAware="true"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL"
-            android:theme="@style/Translucent">
-            <intent-filter>
-                <action android:name="${applicationId}.intent.action.SERVER_STARTED" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <service
-            android:name=".legacy.service.WorkService"
-            android:directBootAware="true"
-            android:exported="false" />
 
         <provider
             android:name=".legacy.provider.TransferProvider"
